fixed: scrollbar horizontal online version

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -102,6 +102,7 @@
 html {
   font-size: 16px;
   scroll-behavior: smooth;
+  overflow-x: hidden;
   background: var(--gradient-page);
 }
 
